--- a/gunicorn-puppetmaster.service
+++ b/gunicorn-puppetmaster.service
@@ -3,9 +3,9 @@ Description=gunicorn daemon for puppetboard
 After=network.target
 
 [Service]
-PIDFile=/run/gunicorn/pid
+PIDFile=/run/gunicorn.pid
 WorkingDirectory=/usr/lib/python2.7/site-packages/puppetboard
-ExecStart=/usr/bin/gunicorn --env http_proxy= --env PUPPETBOARD_SETTINGS=/var/www/puppetboard/settings.py --pid /run/gunicorn.pid --bind 127.0.0.1:9090 --user puppetboard --group puppetboard puppetboard.app:app
+ExecStart=/usr/bin/gunicorn --workers 4 --env http_proxy= --env PUPPETBOARD_SETTINGS=/var/www/puppetboard/settings.py --pid /run/gunicorn.pid --bind 127.0.0.1:9090 --user puppetboard --group puppetboard puppetboard.app:app
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
 PrivateTmp=true
